--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,7 +5,7 @@
     <declare-styleable name="CircularImageView">
 
         <!-- Specifies whether or not to draw a circular border around the image. -->
-        <attr name="border" format="boolean" />
+        <attr name="border" format="boolean"/>
         <!-- Specifies the color of the border draw around the image. (if enabled) -->
         <attr name="border_color" format="color"/>
         <!-- Makes the border this pixels wide. (if enabled) -->
@@ -23,10 +23,10 @@
     </declare-styleable>
 
     <declare-styleable name="CustomCircularImageViewTheme">
-        <attr name="circularImageViewStyle" format="reference" />
+        <attr name="circularImageViewStyle" format="reference"/>
     </declare-styleable>
     <declare-styleable name="FABCenterLayout">
-        <attr name="top_id" format="reference" />
+        <attr name="top_id" format="reference"/>
     </declare-styleable>
 
     <declare-styleable name="EnhancedEditText">
@@ -56,5 +56,8 @@
         <attr name="addButtonPlusIconColor" format="color"/>
     </declare-styleable>
 
+    <declare-styleable name="TabTitle">
+        <attr format="reference|color" name="tabBarColor"/>
+    </declare-styleable>
 
 </resources>
