--- a/app/src/main/res/drawable/fab_inv_button.xml
+++ b/app/src/main/res/drawable/fab_inv_button.xml
@@ -4,19 +4,19 @@
 
     <item android:state_selected="true">
         <shape android:shape="oval">
-            <solid android:color="@color/accentDark" />
+            <solid android:color="?attr/colorPrimaryDark" />
         </shape>
     </item>
 
     <item android:state_pressed="true">
         <shape android:shape="oval">
-            <solid android:color="@color/accentDark" />
+            <solid android:color="?attr/colorPrimaryDark" />
         </shape>
     </item>
 
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/complementary" />
+            <solid android:color="?attr/colorAccent" />
         </shape>
     </item>
 
