--- a/app/src/main/res/layout/activity_repo_detail.xml
+++ b/app/src/main/res/layout/activity_repo_detail.xml
@@ -10,7 +10,7 @@
         android:id="@+id/repoDetailInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/accent">
+        android:background="?attr/colorPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
