--- a/app/src/main/res/layout/fab.xml
+++ b/app/src/main/res/layout/fab.xml
@@ -4,8 +4,8 @@
                                                        xmlns:fab="http://schemas.android.com/apk/res-auto"
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
-                                                       fab:colorNormal="@color/accent"
-                                                       fab:colorPressed="@color/accentDark"
+                                                       fab:colorNormal="?attr/colorPrimary"
+                                                       fab:colorPressed="?attr/colorPrimaryDark"
                                                        android:layout_alignParentBottom="true"
                                                        android:layout_centerHorizontal="true"
                                                        android:layout_marginBottom="16dp"
