--- a/app/src/main/res/layout/repos_fragment_manager.xml
+++ b/app/src/main/res/layout/repos_fragment_manager.xml
@@ -10,25 +10,25 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:background="@color/accent">
+        android:background="?attr/colorPrimary">
 
         <com.alorma.github.ui.view.TabTitle
             android:id="@+id/tab1"
             android:text="@string/navigation_repos"
             style="@style/tab_repos"
-            app:barColor="@color/complementary"/>
+            app:barColor="?attr/colorAccent"/>
 
         <com.alorma.github.ui.view.TabTitle
             android:id="@+id/tab2"
             android:text="@string/navigation_watched_repos"
             style="@style/tab_repos"
-            app:barColor="@color/complementary" />
+            app:barColor="?attr/colorAccent" />
 
         <com.alorma.github.ui.view.TabTitle
             android:id="@+id/tab3"
             android:text="@string/navigation_starred_repos"
             style="@style/tab_repos"
-            app:barColor="@color/complementary"/>
+            app:barColor="?attr/colorAccent"/>
     </LinearLayout>
 
     <android.support.v4.view.ViewPager
