--- a/app/src/main/res/layout/row_repo.xml
+++ b/app/src/main/res/layout/row_repo.xml
@@ -52,7 +52,7 @@
                 android:paddingTop="0dp"
                 android:textSize="@dimen/textSizeXLarge"
                 android:fontFamily="sans-serif-light"
-                android:textColor="@color/accentDark"/>
+                android:textColor="?attr/colorPrimaryDark"/>
 
             <TextView
                 android:layout_width="wrap_content"
