--- a/app/src/main/res/layout/row_user_spinner.xml
+++ b/app/src/main/res/layout/row_user_spinner.xml
@@ -39,7 +39,7 @@
                 android:paddingTop="0dp"
                 android:textSize="@dimen/textSizeXLarge"
                 android:fontFamily="sans-serif-light"
-                android:textColor="@color/accentDark"
+                android:textColor="?attr/colorPrimaryDark"
                 android:layout_toEndOf="@+id/authorAvatar"
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/authorAvatar"/>
