--- a/app/src/main/res/layout/small_pager_spinner.xml
+++ b/app/src/main/res/layout/small_pager_spinner.xml
@@ -9,7 +9,7 @@
         android:layout_width="4dp"
         android:layout_height="match_parent"
         android:layout_gravity="top|bottom|left"
-        android:background="@color/complementary"
+        android:background="?attr/colorAccent"
         android:id="@+id/divider"/>
 
     <TextView
