--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -25,10 +25,18 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:id="@+id/cardsContainer">
 
             <it.gmariotti.cardslib.library.view.CardViewNative
                 android:id="@+id/cardBio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/card_external"
+                card:card_layout_resourceID="@layout/native_card_layout"/>
+
+            <it.gmariotti.cardslib.library.view.CardViewNative
+                android:id="@+id/cardRepos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/card_external"
