--- a/app/src/main/res/layout/row_user.xml
+++ b/app/src/main/res/layout/row_user.xml
@@ -1,17 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              xmlns:card="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
 
-    <it.gmariotti.cardslib.library.view.CardViewNative
-        android:id="@+id/carddemo_largeimage"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card:card_layout_resourceID="@layout/native_material_largeimage_text_card"
-        style="@style/card_external"
-        />
+        android:layout_height="@dimen/user_row_item_height"
+        android:gravity="center_vertical">
+
+        <com.alorma.github.ui.view.CircularImageView
+            android:layout_width="@dimen/user_row_item_image_size"
+            android:layout_height="@dimen/user_row_item_image_size"
+            android:layout_marginLeft="@dimen/user_row_item_margin"
+            android:layout_marginStart="@dimen/user_row_item_margin"
+            android:layout_marginRight="@dimen/user_row_item_margin"
+            android:layout_marginEnd="@dimen/user_row_item_margin"
+            android:id="@+id/avatarAuthorImage"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginRight="@dimen/user_row_item_margin"
+            android:layout_marginEnd="@dimen/user_row_item_margin"
+            android:id="@+id/textAuthorLogin"
+            style="@style/user_row_item"/>
+    </LinearLayout>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/card_row_item_divider_height"
+        android:background="@drawable/divider_inside_car"
+        android:layout_marginLeft="@dimen/card_row_item_divider_left_margin"
+        android:layout_marginStart="@dimen/card_row_item_divider_left_margin"/>
+
 </LinearLayout>
