--- a/app/src/main/res/menu/new_issue.xml
+++ b/app/src/main/res/menu/new_issue.xml
@@ -2,8 +2,9 @@
       xmlns:tools="http://schemas.android.com/tools"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       tools:context="com.alorma.github.ui.activity.NewIssueActivity">
-    <item android:id="@+id/action_send"
+    <item
+        android:id="@+id/action_send"
         android:title="@string/action_send_issue"
         android:orderInCategory="100"
-        app:showAsAction="always" />
+        app:showAsAction="always"/>
 </menu>
