--- a/app/src/main/res/layout/custom_list_fragment.xml
+++ b/app/src/main/res/layout/custom_list_fragment.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/gray_github_light">
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="@color/white">
 
-    <include layout="@android:layout/list_content" />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycler"/>
 
 </FrameLayout>
