--- a/app/src/main/res/layout/single_commit_fragment.xml
+++ b/app/src/main/res/layout/single_commit_fragment.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/recycler"/>
 </LinearLayout>
