--- a/app/src/main/res/layout/fab_white.xml
+++ b/app/src/main/res/layout/fab_white.xml
@@ -4,9 +4,8 @@
                                                        xmlns:fab="http://schemas.android.com/apk/res-auto"
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
-                                                       fab:colorNormal="@color/white"
-                                                       fab:colorPressed="@color/gray_github_medium"
-                                                       fab:plusIconColor="?attr/colorPrimary"
+                                                       fab:fab_colorNormal="?attr/colorAccent"
+                                                       fab:fab_colorPressed="?attr/colorAccent"
                                                        android:layout_alignParentBottom="true"
                                                        android:layout_centerHorizontal="true"
                                                        android:layout_marginBottom="16dp"
