--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,28 +10,19 @@
     <color name="issue_state_close">#ffd67a4c</color>
     <color name="defaultEnchancedColor">#00ff0000</color>
 
-    <integer-array name="colorsSmooth">
-        <item>@color/accent</item>
-        <item>@color/accentDark</item>
-    </integer-array>
-
-    <integer-array name="colorsFileContent">
-        <item>@color/accent</item>
-        <item>@color/gray_github_light</item>
-        <item>@color/accentDark</item>
-        <item>@color/gray_github_light</item>
-    </integer-array>
-
     <integer-array name="colorsSmoothWhite">
         <item>@color/gray_github_light</item>
         <item>@color/gray_github_medium</item>
         <item>@color/gray_github_dark</item>
     </integer-array>
 
-    <color name="lDialogPositve">#ffffffff</color>
-    <color name="lDialogNegative">#ff808080</color>
+    <color name="lDialogPositve">@color/accent</color>
+    <color name="lDialogNegative">@color/accent</color>
+    
     <color name="privateRepo">#a1882b</color>
+    
     <color name="privateRepoBackground">#f8eeca</color>
+    
     <color name="redError">#ffff1a29</color>
 
     <string name="lDialogPositve">#ffffffff</string>
