--- a/app/src/main/res/layout/single_commit_fragment.xml
+++ b/app/src/main/res/layout/single_commit_fragment.xml
@@ -4,8 +4,47 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:padding="8dp"
+        android:paddingLeft="?attr/actionBarSize"
+        android:background="@color/primary_light"
+        android:id="@+id/message"
+        android:textColor="@color/secondary_text"
+        android:gravity="center"
+        android:textSize="16sp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/commit_stats_green"
+            android:drawablePadding="8dp"
+            android:text="@string/commit_additions"
+            android:id="@+id/additions"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/commit_stats_red"
+            android:drawablePadding="8dp"
+            android:text="@string/commit_deletions"
+            android:id="@+id/deletions"/>
+
+    </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/recycler"/>
 </LinearLayout>
