Profile FAB follow / unfollow

--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -1,46 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:card="http://schemas.android.com/apk/res-auto"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@id/toolbar"
-        android:layout_height="240dp"
+    <com.alorma.github.ui.view.FABCenterLayout
         android:layout_width="match_parent"
-        android:minHeight="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:gravity="bottom"
-        android:paddingBottom="16dp"/>
+        android:layout_height="match_parent"
+        app:top_id="@id/top"
+        android:id="@+id/fabLayout">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="240dp"
+            android:background="?attr/colorPrimary"
+            android:id="@id/top">
 
-        <LinearLayout
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/image"
+                android:scaleType="centerCrop"/>
+            
+            <android.support.v7.widget.Toolbar
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@id/toolbar"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:minHeight="?attr/actionBarSize"
+                android:background="@android:color/transparent"
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+        </FrameLayout>
+
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:id="@+id/cardsContainer">
+            android:paddingTop="240dp"
+            android:clipToPadding="false"
+            android:id="@+id/cardsContainerScroll">
 
-            <it.gmariotti.cardslib.library.view.CardViewNative
-                android:id="@+id/cardBio"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/card_external"
-                card:card_layout_resourceID="@layout/native_card_layout"/>
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:id="@+id/cardsContainer">
 
-            <it.gmariotti.cardslib.library.view.CardViewNative
-                android:id="@+id/cardRepos"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/card_external"
-                card:card_layout_resourceID="@layout/native_card_layout"/>
-        </LinearLayout>
-    </ScrollView>
+                <it.gmariotti.cardslib.library.view.CardViewNative
+                    android:id="@+id/cardBio"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/card_external"
+                    card:card_layout_resourceID="@layout/native_card_layout"/>
+
+                <it.gmariotti.cardslib.library.view.CardViewNative
+                    android:id="@+id/cardRepos"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/card_external"
+                    card:card_layout_resourceID="@layout/native_card_layout"/>
+            </LinearLayout>
+        </ScrollView>
+    </com.alorma.github.ui.view.FABCenterLayout>
 </LinearLayout>
