--- a/app/src/main/res/layout/fab_white.xml
+++ b/app/src/main/res/layout/fab_white.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.getbase.floatingactionbutton.AddFloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
+<com.getbase.floatingactionbutton.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
                                                        xmlns:fab="http://schemas.android.com/apk/res-auto"
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
