--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:card="http://schemas.android.com/apk/res-auto"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
@@ -25,8 +24,6 @@
                 android:scaleType="centerCrop"/>
             
             <android.support.v7.widget.Toolbar
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@id/toolbar"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
@@ -55,14 +52,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     style="@style/card_external"
-                    card:card_layout_resourceID="@layout/native_card_layout"/>
+                    app:card_layout_resourceID="@layout/native_card_layout"/>
 
                 <it.gmariotti.cardslib.library.view.CardViewNative
                     android:id="@+id/cardRepos"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     style="@style/card_external"
-                    card:card_layout_resourceID="@layout/native_card_layout"/>
+                    app:card_layout_resourceID="@layout/native_card_layout"/>
             </LinearLayout>
         </ScrollView>
     </com.alorma.github.ui.view.FABCenterLayout>
