--- a/app/src/main/res/layout/single_commit_fragment.xml
+++ b/app/src/main/res/layout/single_commit_fragment.xml
@@ -46,5 +46,6 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/gray_github_light"
         android:id="@+id/recycler"/>
 </LinearLayout>
