--- a/app/src/main/res/layout/base_list.xml
+++ b/app/src/main/res/layout/base_list.xml
@@ -3,7 +3,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/listContentFL">
+    android:id="@id/listContentFL">
 
     <FrameLayout
         android:id="@+id/listContainer"
