--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:top_id="@id/top"
-        android:id="@+id/fabLayout">
+        app:scrollable_id="@id/cardsContainerScroll"
+        android:id="@id/fabLayout">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -40,7 +41,7 @@
             android:paddingTop="184dp"
             android:clipToPadding="false"
             android:layout_marginTop="?attr/actionBarSize"
-            android:id="@+id/cardsContainerScroll">
+            android:id="@id/cardsContainerScroll">
 
             <LinearLayout
                 android:layout_width="match_parent"
