--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,24 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <include layout="@layout/toolbar" />
-
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:id="@+id/drawer_layout"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
 
-        <FrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/content"/>
+            android:orientation="vertical"
+            android:paddingTop="@dimen/translucent_status_dimen_padding_top">
+
+            <include layout="@layout/toolbar"/>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/content"/>
+        </LinearLayout>
 
         <FrameLayout
             android:layout_width="304dp"
