--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -62,4 +62,5 @@
     <dimen name="user_row_item_margin">16dp</dimen>
     <dimen name="issue_discussion_header_unfold">400dp</dimen>
     <dimen name="issue_discussion_header_fold">120dp</dimen>
+    <dimen name="translucent_status_dimen_padding_top">0dp</dimen>
 </resources>
